--- a/projects/front-components/.storybook/preview-head.html
+++ b/projects/front-components/.storybook/preview-head.html
@@ -1,15 +1,17 @@
 <style>
-    :root {
-        --surface-page: #fafaf9;
-    }
-    .dark {
-        --surface-page: #191919;
-    }
-    body, #storybook-preview-wrapper, .sbdocs-preview {
-        background-color: var(--surface-page) !important;
-    }
+	:root {
+		--surface-page: #fafaf9;
+	}
+	.dark {
+		--surface-page: #191919;
+	}
+	body,
+	#storybook-preview-wrapper,
+	.sbdocs-preview {
+		background-color: var(--surface-page) !important;
+	}
 
-    @font-face {
+	@font-face {
 		font-family: 'Onest';
 		src: url('./assets/fonts/onest/bold/Onest-Bold.woff') format('woff');
 		font-weight: 700;
